--- a/draft-ietf-regext-change-poll.html
+++ b/draft-ietf-regext-change-poll.html
@@ -424,7 +424,7 @@
 <link href="#rfc.appendix.A.14" rel="Chapter" title="A.14 Change from REGEXT 07 to REGEXT 08"/>
 <link href="#rfc.appendix.A.15" rel="Chapter" title="A.15 Change from REGEXT 08 to REGEXT 09"/>
 <link href="#rfc.appendix.A.16" rel="Chapter" title="A.16 Change from REGEXT 09 to REGEXT 10"/>
-<link href="#rfc.appendix.A.17" rel="Chapter" title="A.17 Change from REGEXT 10 to REGEXT 10"/>
+<link href="#rfc.appendix.A.17" rel="Chapter" title="A.17 Change from REGEXT 10 to REGEXT 11"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -544,7 +544,7 @@
 <li>A.14.   <a href="#rfc.appendix.A.14">Change from REGEXT 07 to REGEXT 08</a></li>
 <li>A.15.   <a href="#rfc.appendix.A.15">Change from REGEXT 08 to REGEXT 09</a></li>
 <li>A.16.   <a href="#rfc.appendix.A.16">Change from REGEXT 09 to REGEXT 10</a></li>
-<li>A.17.   <a href="#rfc.appendix.A.17">Change from REGEXT 10 to REGEXT 10</a></li>
+<li>A.17.   <a href="#rfc.appendix.A.17">Change from REGEXT 10 to REGEXT 11</a></li>
 </ul><li><a href="#rfc.authors">Authors' Addresses</a></li>
 
 
@@ -1128,7 +1128,7 @@ END</pre>
 <p id="rfc.section.7.p.1">The mapping extensions described in this document do not provide any security services beyond those described by <a href="#RFC5730">EPP</a> <cite title="NONE">[RFC5730]</cite> and protocol layers used by EPP. The security considerations described in these other specifications apply to this specification as well.</p>
 <h1 id="rfc.section.8"><a href="#rfc.section.8">8.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
 <p id="rfc.section.8.p.1">The authors wish to acknowledge the original concept for this draft and the efforts in the initial versions of this draft by Trung Tran and Sharon Wodjenski.</p>
-<p id="rfc.section.8.p.2">Special suggestions that have been incorporated into this document were provided by Scott Hollenbeck, Michael Holloway, Benjamin Kaduk, and Patrick Mevzek.</p>
+<p id="rfc.section.8.p.2">Special suggestions that have been incorporated into this document were provided by Scott Hollenbeck, Michael Holloway, and Patrick Mevzek.</p>
 <h1 id="rfc.references"><a href="#rfc.references">9.</a> References</h1>
 <h1 id="rfc.references.1"><a href="#rfc.references.1">9.1.</a> Normative References</h1>
 <table>
@@ -1302,11 +1302,11 @@ END</pre>
 <ol>
   <li>Updates based on the AD review by Adam Roach, that include: <ol><li>Fix the "purge" and "autoPurge" examples to use the normative "before" state instead of the default "after" state.</li><li>Added the sentences "The extension only extends the EPP &lt;poll&gt; response in <a href="#RFC5730">[RFC5730]</a> and does not extend the EPP &lt;poll&gt; command.  Please refer to <a href="#RFC5730">[RFC5730]</a> for information and examples of the EPP &lt;poll&gt; command." in the "Introduction" to clarify what is extended and reference <a href="#RFC5730">[RFC5730]</a> for the EPP &lt;poll&gt; command.</li><li>Added missing hyphens to "client-sponsored" and "court-directed".</li><li>Removed "changePoll-1.0" is used as an abbreviation for "urn:ietf:params:xml:ns:changePoll-1.0" and replaced the paragraph based on what was done in draft-ietf-regext-allocation-token.</li><li>Changed normative "SHOULD" to non-normative "should" in "An operation consists of any transform operation that impacts objects that the client sponsers and should be notified of."</li><li>Added normative reference to <a href="#RFC0020">[RFC0020]</a> to define "7-bit US-ASCII".</li><li>Added the sentence "The custom operations supported is up to server policy." to the description of the "custom" operation.</li><li>Broke up the "This extension adds operation detail..." sentence into two seperate sentences to address the "does" and the "is" seperately.</li><li>Removed the commas from "Any transform operation to an object..." sentence.</li><li>Changed to use an IPv6 address from the documentation-only prefix "2001:DB8::/32" in RFC 3849.  The IPv6 address 2001:db8:0:0:1:0:0:1 was used.</li></ol><p> </p></li>
 </ol>
-<h1 id="rfc.appendix.A.17"><a href="#rfc.appendix.A.17">A.17.</a> <a href="#version-WG10-to-WG11" id="version-WG10-to-WG11">Change from REGEXT 10 to REGEXT 10</a></h1>
+<h1 id="rfc.appendix.A.17"><a href="#rfc.appendix.A.17">A.17.</a> <a href="#version-WG10-to-WG11" id="version-WG10-to-WG11">Change from REGEXT 10 to REGEXT 11</a></h1>
 <p/>
 
 <ol>
-  <li>Updates based on the review by Benjamin Kaduk, that include: <ol><li>Change references of "The enumerated list ... include:" to "the enumerated list ... is:"</li><li>In section 2.2, explicitly state what the message is inserted into, with the change of "... MUST be inserted prior to ..." to "... MUST be inserted into the message queue to ...".</li></ol><p> </p></li>
+  <li>Updates based on the review by Benjamin Kaduk, that include: <ol><li>Change references of "The enumerated list ... include:" to "The enumerated list ... is:".</li><li>In section 2.2, explicitly state what the message is inserted into, with the change of "... MUST be inserted prior to ..." to "... MUST be inserted into the message queue prior to ...".</li></ol><p> </p></li>
 </ol>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Authors' Addresses</a>
@@ -1332,7 +1332,7 @@ END</pre>
 	</span>
 	<span class="vcardline">EMail: <a href="mailto:jgould@verisign.com">jgould@verisign.com</a></span>
 
-<span class="vcardline">URI: <a href="http://www.verisigninc.com">http://www.verisigninc.com</a></span>
+<span class="vcardline">URI: <a href="http://www.verisign.com">http://www.verisign.com</a></span>
 
   </address>
 </div><div class="avoidbreak">
