--- a/draft-ietf-regext-change-poll.html
+++ b/draft-ietf-regext-change-poll.html
@@ -425,6 +425,7 @@
 <link href="#rfc.appendix.A.15" rel="Chapter" title="A.15 Change from REGEXT 08 to REGEXT 09"/>
 <link href="#rfc.appendix.A.16" rel="Chapter" title="A.16 Change from REGEXT 09 to REGEXT 10"/>
 <link href="#rfc.appendix.A.17" rel="Chapter" title="A.17 Change from REGEXT 10 to REGEXT 11"/>
+<link href="#rfc.appendix.A.18" rel="Chapter" title="A.18 Change from REGEXT 11 to REGEXT 12"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -432,8 +433,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Gould, J. and K. Feher" />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-11" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-12-10" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-regext-change-poll-12" />
+  <meta name="dct.issued" scheme="ISO8601" content="2019-1-3" />
   <meta name="dct.abstract" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client-sponsored objects that were not initiated by the client through EPP. These operations may include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court-directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
   <meta name="description" content="This document describes an Extensible Provisioning Protocol (EPP) extension for notifying clients of operations on client-sponsored objects that were not initiated by the client through EPP. These operations may include contractual or policy requirements including but not limited to regular batch processes, customer support actions, Uniform Domain-Name Dispute-Resolution Policy (UDRP) or Uniform Rapid Suspension (URS) actions, court-directed actions, and bulk updates based on customer requests.  Since the client is not directly involved or knowledgable of these operations, the extension is used along with an EPP object mapping to provide the resulting state of the post-operation object, and optionally a pre-operation object, with the operation meta-data of what, when, who, and why." />
 
@@ -457,12 +458,12 @@
   <td class="right">K. Feher</td>
 </tr>
 <tr>
-  <td class="left">Expires: June 13, 2019</td>
+  <td class="left">Expires: July 7, 2019</td>
   <td class="right">Neustar</td>
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">December 10, 2018</td>
+  <td class="right">January 3, 2019</td>
 </tr>
 
     	
@@ -470,7 +471,7 @@
   </table>
 
   <p class="title">Change Poll Extension for the Extensible Provisioning Protocol (EPP)<br />
-  <span class="filename">draft-ietf-regext-change-poll-11</span></p>
+  <span class="filename">draft-ietf-regext-change-poll-12</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -482,11 +483,11 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on June 13, 2019.</p>
+<p>This Internet-Draft will expire on July 7, 2019.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
-<p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
+<p>Copyright (c) 2019 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
 
   
@@ -545,6 +546,7 @@
 <li>A.15.   <a href="#rfc.appendix.A.15">Change from REGEXT 08 to REGEXT 09</a></li>
 <li>A.16.   <a href="#rfc.appendix.A.16">Change from REGEXT 09 to REGEXT 10</a></li>
 <li>A.17.   <a href="#rfc.appendix.A.17">Change from REGEXT 10 to REGEXT 11</a></li>
+<li>A.18.   <a href="#rfc.appendix.A.18">Change from REGEXT 11 to REGEXT 12</a></li>
 </ul><li><a href="#rfc.authors">Authors' Addresses</a></li>
 
 
@@ -590,7 +592,7 @@
 <p id="rfc.section.2.2.p.2">For operations in <a href="#operation">Section 2.1</a> that don't have an "after" state, the server MUST use the "before" state poll message.  For example, for the "delete" operation with the "op" attribute set to "purge", or the "autoPurge" operation, the server includes the state of the object prior to being purged in the "before" state poll message.</p>
 <p id="rfc.section.2.2.p.3">For operations in <a href="#operation">Section 2.1</a> that don't have a "before" state, the server MUST use the "after" state poll message.  For example, for the "create" operation, the server includes the state of the object after creation in the "after" state poll message.</p>
 <h1 id="rfc.section.2.3"><a href="#rfc.section.2.3">2.3.</a> <a href="#who" id="who">Who</a></h1>
-<p id="rfc.section.2.3.p.1">The &lt;changePoll:who&gt; element defines who executed the operation for audit purposes.  The scheme used for the possible set of &lt;changePoll:who&gt; element values is up to server policy.  The server MAY identify the &lt;changePoll:who&gt; element value based on: </p>
+<p id="rfc.section.2.3.p.1">The &lt;changePoll:who&gt; element defines who executed the operation for audit purposes.  It is a freeform value that is strictly meant for audit purposes and not meant to drive client-side logic.  The scheme used for the possible set of &lt;changePoll:who&gt; element values is up to server policy.  The server MAY identify the &lt;changePoll:who&gt; element value based on: </p>
 <p/>
 
 <dl>
@@ -1307,6 +1309,12 @@ END</pre>
 
 <ol>
   <li>Updates based on the review by Benjamin Kaduk, that include: <ol><li>Change references of "The enumerated list ... include:" to "The enumerated list ... is:".</li><li>In section 2.2, explicitly state what the message is inserted into, with the change of "... MUST be inserted prior to ..." to "... MUST be inserted into the message queue prior to ...".</li></ol><p> </p></li>
+</ol>
+<h1 id="rfc.appendix.A.18"><a href="#rfc.appendix.A.18">A.18.</a> <a href="#version-WG11-to-WG12" id="version-WG11-to-WG12">Change from REGEXT 11 to REGEXT 12</a></h1>
+<p/>
+
+<ol>
+  <li>Added clarification for the &lt;changePoll:who&gt; element based on the feedback from Benjamin Kaduk.</li>
 </ol>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Authors' Addresses</a>
